# villagers-vs-illagers

./: Cargo.toml  README.md  build.rs
assets/: sprite_transparency_metadata.json
packed/: example-ui.pak  sprite.pak
src/: alloc.rs  lib.rs  rng.rs  slotmap.rs  sound.rs  sprites.rs  terrain.rs
