[package]
name = "cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
fastrand = "2.0.1"
itoa = "1.0.9"

[profile.release]
opt-level = "z"
lto = true
debug-assertions = false
strip = "debuginfo"

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
